<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nowplaying"
            android:icon="@drawable/ic_subscriptions_white_24dp"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_video_library_white_24dp"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/favorite" />
    </group>

    <item android:title="@string/preferences">
        <menu>
            <item
                android:id="@+id/menu_languages"
                android:title="@string/languages"/>
        </menu>
    </item>


</menu>
