<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="285dp"
            android:id="@+id/img_movie"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/image_film"
            tools:src="@color/colorAccent"/>

        <TextView
            android:layout_toRightOf="@id/img_movie"
            android:layout_toEndOf="@id/img_movie"
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="JUDUL FILM"
            android:lines="1"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_below="@id/tv_judul"
            android:layout_toRightOf="@id/img_movie"
            android:layout_toEndOf="@id/img_movie"
            android:id="@+id/tv_date"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            tools:text="DATE FILM"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_below="@id/tv_date"
            android:layout_toRightOf="@id/img_movie"
            android:layout_toEndOf="@id/img_movie"
            android:id="@+id/tv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="DETAIL FILM"
            android:lines="2"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_detail"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/img_movie"
            android:layout_toEndOf="@id/img_movie"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_set_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="3dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@color/backgroud_main"
                android:text="@string/detail"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_set_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="3dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@color/backgroud_main"
                android:text="@string/share"
                android:layout_weight="1"/>
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>